--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "antd": "^4.22.4",
     "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.5",
+    "faker": "^6.6.6",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
