--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Created by https://www.toptal.com/developers/gitignore/api/react
+# Edit at https://www.toptal.com/developers/gitignore?templates=react
 
-# dependencies
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
 node_modules
-/.pnp
-.pnp.js
+bower_components
 
-# testing
-/coverage
 
-# production
-/build
 
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.sublime*
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+psd
+thumb
+sketch
+
+# End of https://www.toptal.com/developers/gitignore/api/react
