--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@ant-design/pro-components": "^2.3.9",
     "@ant-design/pro-table": "^3.0.8",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@syncfusion/ej2": "^19.4.48",
@@ -26,9 +30,14 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-images-uploading": "^3.1.7",
+    "react-native-image-picker": "^4.10.0",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
+    "reactjs-popup": "^2.0.5",
     "umi-request": "^1.4.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
