--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-grid-easy": "^2.1.3",
     "react-icons": "^4.4.0",
     "react-images-uploading": "^3.1.7",
     "react-loading": "^2.0.3",
