--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.4.0",
     "react-images-uploading": "^3.1.7",
     "react-loader-spinner": "^5.3.4",
+    "react-loading": "^2.0.3",
     "react-native-image-picker": "^4.10.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
