--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
+  "engines": { "node": "12.16.1", "npm": "6.14.4" },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
