--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "antd": "^4.22.4",
     "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
@@ -44,7 +45,10 @@
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
-  "engines": { "node": "16.14.2", "npm": "8.5.0" },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
