--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/pro-components": "^2.3.9",
     "@ant-design/pro-table": "^3.0.8",
+    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
@@ -34,11 +35,13 @@
     "react-images-uploading": "^3.1.7",
     "react-loader-spinner": "^5.3.4",
     "react-loading": "^2.0.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-image-picker": "^4.10.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-animate": "^3.5.2",
     "react-star-ratings": "^2.3.0",
     "reactjs-popup": "^2.0.5",
     "umi-request": "^1.4.0",
@@ -56,13 +59,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
